# better-call-buffet

./: .dockerignore  .ebignore  .env.example  .gitignore  .railwayignore  CLAUDE.md  Dockerfile  Dockerfile.migrate  GEMINI.md  PRODUCTION-DEPLOYMENT.md  RAILWAY_DEPLOYMENT_GUIDE.md  README.md  alembic.ini  apprunner.yaml  backend-education-cursor-rule.md  backend-learning-checklist.md  better-call-buffet.code-workspace  docker-compose.yml  fly.toml  package-lock.json  package.json  pyproject.toml  railway-env-variables.md  railway.toml  requirements.txt  setup-black-formatting.md  setup.ps1  setup.sh  start.sh  test_db_connection.py
.claude/: settings.json  settings.local.json
.claude/agents/: migration-safety-manager.md  red-team-analyst.md  security-auditor.md
.claude/scripts/: code-standards-validator.sh  documentation-tracker.sh  educational-prompt-enhancer.sh  git-push-blocker.sh
.cursor/rules/: back-end-learning.mdc  decision-making.mdc  derived-cursor-rules.mdc  terminal.mdc
.ebextensions/: 01_flask.config
.elasticbeanstalk/: config.yml
.github/workflows/: cd.yml  ci.yml  deploy-to-eb.yml  deploy.yml  fly-deploy.yml  main.yml
.specstory/: .project.json
.specstory/ai_rules_backups/: derived-cursor-rules.mdc.2025-04-29T14-36-38-334Z  derived-cursor-rules.mdc.2025-04-29T14-39-39-310Z  derived-cursor-rules.mdc.2025-04-29T14-42-39-701Z  derived-cursor-rules.mdc.2025-04-29T14-45-41-429Z  derived-cursor-rules.mdc.2025-04-29T14-54-42-279Z  derived-cursor-rules.mdc.2025-04-29T15-01-41-961Z  derived-cursor-rules.mdc.2025-04-29T15-06-55-605Z  derived-cursor-rules.mdc.2025-04-29T15-10-51-781Z  derived-cursor-rules.mdc.2025-04-29T15-24-21-155Z  derived-cursor-rules.mdc.2025-04-29T15-28-54-217Z  derived-cursor-rules.mdc.2025-04-29T16-58-43-540Z  derived-cursor-rules.mdc.2025-04-29T17-04-43-337Z  derived-cursor-rules.mdc.2025-04-29T17-10-44-070Z  derived-cursor-rules.mdc.2025-04-29T17-13-43-745Z
.specstory/history/: 2025-02-23_16-40-building-a-python-rest-api-for-finance-app.md  2025-03-30_02-23-connect-local-database-in-dbeaver.md  2025-04-05_17-31-project-setup-assistance.md  2025-04-15_12-05-brainstorming-personal-finance-api-development.md  2025-04-20_21-09-aws-deployment-and-github-actions-help.md  2025-04-20_21-11-starting-a-coding-conversation.md  2025-04-27_19-30-missing-env-vars-for-database-connection.md  2025-04-29_14-05-financial-tracking-and-investment-review.md  2025-04-30_03-13-guide-to-database-seeding.md  2025-05-11_16-03-fixing-cors-error-in-web-application.md  2025-06-01_17-00-designing-architecture-for-financial-app.md  2025-06-08_14-06-apply-migrations-after-git-pull.md  2025-06-08_16-01-handling-user-id-in-broker-schema.md  2025-06-14_18-40-expressing-frustration-and-seeking-help.md  2025-06-14_19-28-querying-account-and-broker-data.md  2025-06-14_21-31-untitled.md  2025-06-14_22-05-show-docker-errors-in-terminal.md  2025-06-14_22-21-understanding-uvicorn-error-logging-issues.md  2025-06-15_00-28-troubleshooting-422-error-in-logging.md  2025-06-15_01-54-database-connection-error-troubleshooting.md  2025-06-15_11-53-router-path-recommendations-for-fastapi.md  2025-06-15_17-46-refactor-accounts-module-for-repository-pattern.md  2025-06-15_21-01-immediate-actions-for-github-and-aws.md  2025-06-16_02-31-debugging-container-error-logs.md  2025-06-16_02-59-understanding-codebase-awareness.md  2025-06-17_01-14-fix-missing-user-id-column-in-invoices.md  2025-06-17_17-43-server-error-and-response-validation-issue.md  2025-06-19_12-59-extracting-account-id-from-query-parameters.md  2025-06-22_19-57-struggling-with-ci-cd-implementation.md  2025-06-22_21-26-deployment-frustrations-with-aws.md  2025-06-22_21-52-just-saying-hi.md  2025-06-26_01-04-required-environment-variables-for-project.md  2025-06-27_03-15-production-migrations-plan-via-ci-cd.md
_ebextensions_backup/: 01-alb-listeners.config  01_python.config  02_logging.config
app/: global.css  layout.tsx  main.py  page.tsx
app/components/: label.tsx
app/core/: config.py  constants.py  dependencies.py  error_handlers.py  logging.py  logging_config.py  middleware.py  secrets.py
app/crud/: base.py
app/db/: base.py  connection_and_session.py  model_registration.py
aws/: cloudwatch-dashboard.json
docs/: MIGRATION_BEST_PRACTICES.md  api.md  application-deployment-guide.md  aws-cli-commands.md  balance-architecture-plan.md  balance-implementation-checklist.md  clean-slate-balance-architecture.md  cloudwatch-alarms.md  database-config.md  database-connection-guide.md  database-migration-workflow.md  dealing-with-cors.md  migrations-best-practices.md  monitoring-guide.md  phase1-implementation.md  phase2-planning.md  phase3-completion-checklist.md  phase3-completion-summary.md  phase3-planning.md  phase4-implementation.md  phase4-planning.md  postman-environment.json  project-plan.md  rds-explained.md  schema-validation.md  troubleshooting.md  user-domain-implementation.md  vpc-design.md
docs/decisions/: 000-decision-template.md  001-nat-gateway-omission.md  002-iam-permissions-model.md  README.md  (+10 more)
migrations/: README.md  env.py
scripts/: create_app_security_group.sh  create_cloudwatch_dashboard.sh  create_tables.py  deploy-monitor.sh  generate-db-password.py  generate-secret-key.py  monitoring-alerts.sh  package_for_eb.sh  reset-database.sql  run-migrations.sh  run-prod.sh  seed_db.py  seed_prod_db.py  seed_prod_db.sql
tests/: test_basic.py  test_dummy.py  test_health.py
utilities/: test_db_connection.py
(+277 files in other folders)
