[tool.poetry]
name = "better-call-buffet"
version = "0.1.0"
description = "A modern web application for financial management and analysis"
authors = ["Mario Brusarosco <mario.brusarosco@gmail.com>"]
readme = "README.md"
packages = [{include = "app"}]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
fastapi = "^0.116.1"
uvicorn = "0.27.1"
hypercorn = "^0.17.0"
python-dotenv = "1.0.1"
sqlalchemy = "2.0.27"
pydantic = {extras = ["email"], version = "2.9.2"}
pydantic-settings = "2.2.1"
# python-jose = {extras = ["cryptography"], version = "^3.5.0"}  # Removed - not used yet, has ecdsa vulnerability
passlib = {extras = ["bcrypt"], version = "1.7.4"}
python-multipart = "0.0.18"
psycopg2-binary = "2.9.9"
alembic = "^1.15.2"
starlette = "^0.47.2"
urllib3 = "^2.5.0"
python-json-logger = "^3.3.0"
structlog = "^25.4.0"
sentry-sdk = {extras = ["fastapi"], version = "^2.0.0"}

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^24.3.0"
flake8 = "^6.1.0"
isort = "^5.12.0"
mypy = "^1.5.1"
safety = "^3.5.2"
pip-audit = "^2.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
explicit_package_bases = true
namespace_packages = true
# Only scan the app directory, not individual domains
files = ["app"]
exclude = [
    "migrations/",
    "scripts/",
    "tests/",
]
